added index title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta chaclerset="utf-8">
-        <title></title>
+        <title>title added</title>
     </head>
     <body>
     This is body of the index file>
