--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>title added</title>
     </head>
     <body>
+        <h1>H1 head</h1>
     This is body of the index file>
     </body>
 </html>
